--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-<h2>Digital Clock</h2>
+<h2>Digital Clck</h2>
 <div class="clock">
     <div>
         <span id="hours">00</span>
@@ -29,3 +29,4 @@
 <script src="./index.js"></script>
 </body>
 </html>
+<!-- fhgriogadhgoidhgodhghdbhdobhdhjdh -->
