--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-<h2>Digital Clck</h2>
+<h2>Digital Cloooooock</h2>
 <div class="clock">
     <div>
         <span id="hours">00</span>
